<resources>
    <string name="app_name">Регіональна інформація</string>
    <string name="ill">Захворіло</string>
    <string name="hospitalized">Шпиталізовано</string>
    <string name="dead">Померло</string>
    <string name="recovered">Одужало</string>
    <string name="vaccinated">Вакциновано</string>
    <string name="testingPLR">Тестовано ПЛР</string>
    <string name="testingIPA">Тестовано ІФА</string>
    <string name="region">Регіон</string>
    <string name="forDay">За добу</string>
    <string name="forPeriod">За період</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="update">Оновити дані</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>